# documentation.practices.software.cleancode.katas.recycling-station

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  better_recycling.cpp  better_recycling.h  commands.h  crusher.cpp  crusher.h  garbage.h  my_test.cpp  recyclingstation.cpp  recyclingstation.h  smelter.cpp  smelter.h  units.h
python/: crusher.py  garbage.py  recyclingstation.py  smelter.py  test_recyclingstation.py  units.py
